src/index.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  background-color: #f5f7fb;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: 'Karla', sans-serif;
  min-height: 100vh;
  overflow-x: scroll;
  padding: 0 1em;
}

